assignment_3/k8s_deployment/k8s_auth.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: auth-svc
  labels:
    app: auth-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 60000
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 555isfaiz/wscbs_g9_auth
        ports:
        - containerPort: 60000
