assignment_3/k8s_deployment/k8s_db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: mysql-urlshortener-svc
  labels:
    app: mysql-urlshortener-svc
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-urlshortener
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-urlshortener
  labels:
    app: mysql-urlshortener
spec:
  containers:
    - name: mysql-urlshortener
      image: mysql:8.0
      ports:
      - containerPort: 3306
      volumeMounts:
      - mountPath: /var/lib/mysql
        name: mysql-data
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-urlshortener-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: mysql-auth-svc
  labels:
    app: mysql-auth-svc
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-auth
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-auth
  labels:
    app: mysql-auth
spec:
  containers:
    - name: mysql-auth
      image: mysql:8.0
      ports:
      - containerPort: 3306
      volumeMounts:
      - mountPath: /var/lib/mysql
        name: mysql-data
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-auth-pv-claim
