assignment_3/k8s_deployment/k8s_idgen.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: id-gen-svc
  labels:
    app: id-gen-svc
spec:
  ports:
  - port: 80
    targetPort: 55555
  selector:
    app: id-gen
---
apiVersion: v1
kind: Pod
metadata:
  name: id-gen
  labels:
    app: id-gen
spec:
  containers:
    - name: id-gen
      image: 555isfaiz/wscbs_g9_idgen
      ports:
      - containerPort: 55555
