assignment_3/k8s_deployment/k8s_url_shortener.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: url-shortener-svc
  labels:
    app: url-shortener-svc
spec:
  ports:
  - port: 80
    targetPort: 53333
  selector:
    app: url-shortener
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: 555isfaiz/wscbs_g9_urlshortener
        ports:
        - containerPort: 53333
