assignment_3/k8s_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: WBCSA-ingress
spec:
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              name: http
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              name: http
