assignment_3/k8s_deployment/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: default
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: url-shortener-svc
      port:
        number: 80  
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port: 
                  number: 80
          - path: /urls(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: url-shortener-svc
                port:
                  number: 80
